# zero2prod

./: Cargo.toml  configuration.yaml
.github/workflows/: general.yml
migrations/: 20240818_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
