[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-http = "3.9.0"
actix-rt = "2.2.0"
actix-web = "4.9.0"
tokio = "1.39.2"
serde = { version = "1", features = ["derive"] }
config = "0.14.0"
env_logger = "0.11.5"
chrono = "0.4.38"

[dev-dependencies]
reqwest = "0.12.7"

[dependencies.sqlx]
version = "0.8.1"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[dependencies.uuid]
version = "1.10.0"
features = ["v4"]
